<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
 <!--   <PreferenceCategory android:title="Background Colours">

        <SwitchPreference
            android:defaultValue="false"
            android:key="map_default_background_colour"
            android:summary="@string/pref_summary_default_background"
            android:title="@string/pref_title_default_background" />

         NOTE: This preference will be enabled only when the checkbox above is checked.
        <ListPreference
            android:defaultValue="true"
            android:dependency="map_default_background_colour"
            android:entries="@array/titles"
            android:entryValues="@array/pref_background_colours"
            android:key="map_default_background_list"
            android:title="List preference" />

    </PreferenceCategory>   -->

    <SwitchPreference
        android:defaultValue="false"
        android:key="map_show_tile_grid"
        android:summary="@string/pref_summary_tile_grid"
        android:title="@string/pref_title_grid_reference" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="map_show_zoom_level"
        android:summary="@string/pref_summary_zoom_level"
        android:title="@string/pref_title_zoom_level" />

    <PreferenceCategory android:title="Tile Size">
        <SwitchPreference
            android:defaultValue="false"
            android:key="map_tile_size_switch"
            android:summary="@string/pref_summary_tile_size"
            android:title="@string/pref_title_tile_size_change" />
        <EditTextPreference
            android:defaultValue="512"
            android:key="map_tile_size"
            android:dependency="map_tile_size_switch"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="number"
            android:title="@string/pref_title_tile_size" />

    </PreferenceCategory>

    <PreferenceCategory android:title="GPS">
        <SwitchPreference
            android:defaultValue="false"
            android:key="map_gps_update_seconds"
            android:summary="@string/pref_summary_gps_update"
            android:title="@string/pref_title_gps_update_frequency" />
        <EditTextPreference
            android:defaultValue="2"
            android:key="map_gps_seconds"
            android:dependency="map_gps_update_seconds"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_gps_frequency" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="map_gps_update_distance"
            android:summary="@string/pref_summary_gps_update_distance"
            android:title="@string/pref_title_gps_update_distance" />
        <EditTextPreference
            android:defaultValue="2"
            android:key="map_gps_distance"
            android:dependency="map_gps_update_distance"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_gps_distance" />
    </PreferenceCategory>
</PreferenceScreen>
