<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.zeedroid.maparcade.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.zeedroid.maparcade.SettingsActivity$MapPreferenceFragment"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/pref_header_map" />

    <header
        android:fragment="com.zeedroid.maparcade.SettingsActivity$ColourPreferenceFragment"
        android:icon="@drawable/ic_palette_black_24dp"
        android:title="@string/pref_header_colour" />

    <header
        android:fragment="com.zeedroid.maparcade.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
