<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zeedroid.maparcade.MapCreateActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/recordButton"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/record_journey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/modifyButton"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/modify_journey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordButton" />

    <Button
        android:id="@+id/publishButton"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/publish_journey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyButton"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/recordText"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/record_text"
        android:textColor="#FFF"
        android:textSize="12sp"
        android:elevation="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/recordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recordButton"
        app:layout_constraintVertical_bias="0.936" />

    <TextView
        android:id="@+id/modifyText"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/modify_text"
        android:textColor="#FFF"
        android:textSize="12sp"
        android:elevation="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/modifyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/modifyButton"
        app:layout_constraintVertical_bias="0.936" />

    <TextView
        android:id="@+id/publishText"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/publish_text"
        android:textColor="#FFF"
        android:textSize="12sp"
        android:elevation="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/publishButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/publishButton"
        app:layout_constraintVertical_bias="0.98" />
</android.support.constraint.ConstraintLayout>
